# eco-cpo-dag

./: .gitignore  .zenodo.json  BUILD.md  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmark/: LICENSE  README.md  build_benchmark.py  reference_detector.py  score.py
benchmark/v1.0/: MANIFEST.json  events.jsonld  labels.json
ecodag/: __init__.py  bench.py  blame.py  constraints.py  cpo.py  crypto.py  dag.py  eco.py  hlc.py  sim.py  trace.py  trace_io.py  zkrange.py
results/: RESULTS.md  blame_breakdown.csv  coverage_vs_fraction.csv  coverage_vs_h.csv  cpo_times.csv  run_meta.json  scan_times.csv  storage_growth.csv  storage_refset.csv  zk_proofs.csv
scripts/: plot.py  reproduce.py
tests/: test_bench.py  test_bench_integration.py  test_blame.py  test_constraints.py  test_constraints_m2.py  test_cpo.py  test_crypto.py  test_dag.py  test_eco.py  test_hlc.py  test_sim.py  test_trace_io.py  test_zkrange.py
