[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ecodag"
version = "0.1.0"
description = "ECO/CPO-DAG prototype: contradiction-based accountability layer (single-machine simulation + microbenchmarks)"
requires-python = ">=3.11"
dependencies = ["pynacl>=1.5"]

[project.optional-dependencies]
dev = ["pytest>=8", "matplotlib>=3.7"]

[tool.setuptools]
packages = ["ecodag"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
